Committing redirect